--- a/src/UserService.Api/appsettings.Development.json
+++ b/src/UserService.Api/appsettings.Development.json
@@ -11,5 +11,10 @@
   },
   "ConnectionStrings": {
     "BookliberaryDB": "Data Source=DESKTOP-0AMMHK6\\MSSQLSERVER1;Initial Catalog=BookExchangeLiberary;User ID=sa;Password=saadmin; Encrypt=False;Connection Timeout=30;"
-  }
+  },
+    "JwtSettings": {
+      "Audience": "your_audience",
+      "Issuer": "raghunath",
+      "SecretKey": "your_very_secret_key"
+    }
 }
